WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199788
[macOS 10.15] Cannot unbold selected text when the system font is used
https://bugs.webkit.org/show_bug.cgi?id=199788
Summary
[macOS 10.15] Cannot unbold selected text when the system font is used
Wenson Hsieh
Reported
2019-07-14 15:20:45 PDT
<
rdar://problem/52142570
>
Attachments
Patch
(16.11 KB, patch)
2019-07-14 17:03 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Remove unintended logging
(15.80 KB, patch)
2019-07-14 17:06 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(2.45 KB, patch)
2019-07-15 14:54 PDT
,
Wenson Hsieh
thorton
: review+
wenson_hsieh
: commit-queue+
Details
Formatted Diff
Diff
Patch
(10.10 KB, patch)
2019-07-15 15:45 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-07-14 17:03:48 PDT
Comment hidden (obsolete)
Created
attachment 374100
[details]
Patch
Wenson Hsieh
Comment 2
2019-07-14 17:06:35 PDT
Created
attachment 374101
[details]
Remove unintended logging
WebKit Commit Bot
Comment 3
2019-07-15 12:09:57 PDT
Comment on
attachment 374101
[details]
Remove unintended logging Clearing flags on attachment: 374101 Committed
r247439
: <
https://trac.webkit.org/changeset/247439
>
WebKit Commit Bot
Comment 4
2019-07-15 12:09:59 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 5
2019-07-15 14:54:23 PDT
Reopening to attach new patch.
Wenson Hsieh
Comment 6
2019-07-15 14:54:24 PDT
Comment hidden (obsolete)
Created
attachment 374153
[details]
Patch
Wenson Hsieh
Comment 7
2019-07-15 15:45:17 PDT
Created
attachment 374158
[details]
Patch
Tim Horton
Comment 8
2019-07-15 15:47:55 PDT
Comment on
attachment 374158
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374158&action=review
> Source/WebKit/ChangeLog:11 > + restore the older CallbackID-based async IPC.
oO oO oO
Wenson Hsieh
Comment 9
2019-07-15 15:49:10 PDT
(In reply to Tim Horton from
comment #8
)
> Comment on
attachment 374158
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=374158&action=review
> > > Source/WebKit/ChangeLog:11 > > + restore the older CallbackID-based async IPC. > > oO oO oO
Regretfully so 😢
Wenson Hsieh
Comment 10
2019-07-15 16:10:05 PDT
Comment on
attachment 374158
[details]
Patch Committed
r247460
: <
https://trac.webkit.org/changeset/247460
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug